# RAG-Multimodal-Financial-Doc-Analysis-and-Recall

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK_RESULTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Tesla Investor Presentations.ipynb  docker-compose.yml  feedback.md  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  roadmap.md  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  eval_regression.md  feature_request.md
.github/workflows/: ci.yml  release.yml
demo/: README.md  app.py
docs/: configuration.md  educational_deepdive.md  evaluation.md  index.md  performance-cost-tuning.md  security.md  troubleshooting.md
docs/adr/: 001-hybrid-retrieval-rrf.md  002-pydantic-v2-config.md  003-pluggable-components-abc.md  004-program-of-thought-sandbox.md  005-feedback-loop-design.md  006-gemini-vision-adapter.md  007-langgraph-agentic-flow.md  008-knowledge-graph-graphrag.md
docs/api/: cli.md  rest.md  sdk.md
docs/architecture/: adr-index.md  components.md  data-flow.md  overview.md
docs/deployment/: docker.md  helm.md  kubernetes.md
docs/quickstart/: docker.md  first-query.md  local.md
docs/tutorials/: 10k-analysis.md  anomaly-detection.md  earnings-qa.md  graphrag.md  index.md  multi-tenant.md
evals/: __init__.py  run_evals.py
evals/golden_datasets/: financial_qa.jsonl
grafana/dashboards/: rag-overview.json  rag-quality-cost.json
helm/rag-financial/: Chart.yaml  values.yaml
helm/rag-financial/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/dev/: dev-config.yaml  kustomization.yaml
k8s/overlays/prod/: kustomization.yaml  replica-count.yaml  resource-limits.yaml
notebooks/: quickstart.ipynb
scripts/: benchmark.py  chaos_test.py  generate_api_key.py  otel-config.yaml  prometheus.yml  seed_golden_dataset.py  setup.sh
scripts/alerting/: alertmanager.yml  slo-burn-rate.yml
spaces/rag-financial/: README.md  app.py  requirements.txt
spaces/rag-financial/examples/: README.md
spaces/rag-financial/tests/: test_space_utils.py
spaces/rag-financial/utils/: __init__.py  generator.py  guardrails.py  pdf_processor.py  retriever.py
src/rag_system/: __init__.py  cli.py  config.py
src/rag_system/agentic/: __init__.py
src/rag_system/api/: __init__.py  app.py
src/rag_system/api/middleware/: auth.py
src/rag_system/api/routers/: documents.py  feedback.py  health.py  ingest.py  query.py  tenants.py
src/rag_system/components/: __init__.py  base.py  colpali_retriever.py  knowledge_graph.py  layout_parser.py  pdf_parser.py  pot_executor.py  query_analyzer.py  table_extractor.py  vector_indexer.py  version_manager.py  vision_processor.py
src/rag_system/components/connectors/: __init__.py  gcs_connector.py
src/rag_system/components/embedder/: __init__.py
src/rag_system/components/evaluator/: __init__.py
src/rag_system/components/generator/: __init__.py
src/rag_system/components/guardrails/: __init__.py
src/rag_system/components/parser/: __init__.py  marker_adapter.py
src/rag_system/components/reranker/: __init__.py
src/rag_system/components/retriever/: __init__.py
src/rag_system/components/vector_store/: __init__.py  pgvector_adapter.py  qdrant_adapter.py
src/rag_system/components/vision/: __init__.py  fallback_chain.py  gemini_adapter.py  local_vllm_adapter.py
src/rag_system/pipeline/: __init__.py
src/rag_system/sdk/: __init__.py
src/rag_system/utils/: __init__.py  audit.py  cost_tracker.py  drift_detector.py  exceptions.py  logger.py  rate_limiter.py  retry_policy.py  semantic_cache.py  telemetry.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_cli.py  test_components.py  test_config.py
tests/integration/: test_api_integration.py  test_pipeline_integration.py
tests/load/: k6_script.js  locustfile.py
tests/unit/: test_agentic.py  test_colpali_retriever.py  test_config.py  test_connectors.py  test_cost_tracker.py  test_demo_app_keys.py  test_drift_detector.py  test_embedder_providers.py  test_evaluator.py  test_feedback_api.py  test_gcs_connector.py  test_generator_providers.py  test_graceful_shutdown.py  test_guardrails.py  test_knowledge_graph.py  test_layout_parser.py  test_pipeline.py  test_pot_executor.py  test_property_based.py  test_qdrant_adapter.py  test_query_analyzer.py  test_retry_policy.py  test_semantic_cache.py  test_table_extractor.py  test_version_manager.py  test_vision_providers.py
