[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rag-multimodal-finance"
version = "1.0.0"
description = "Enterprise-grade multimodal RAG system for financial document analysis with async processing, structured logging, and observability."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAG Team", email = "team@example.com"},
]

[tool.poetry]
name = "rag-multimodal-finance"
version = "1.0.0"
description = "Enterprise-grade multimodal RAG system for financial document analysis"
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "rag_system", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

# Core LLM & Vector DB
llama-index = "^0.9.8"
deeplake = "^3.8.12"
langchain = "^0.0.350"
openai = "^1.3.0"
cohere = "^4.37"

# PDF & Vision Processing
unstructured = {extras = ["all-docs"], version = "^0.11.0"}
pdf2image = "^1.16.3"
Pillow = "^10.0.0"

# Web & Data Handling
httpx = "^0.24.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
requests = "^2.31.0"

# Utilities
tqdm = "^4.66.0"
numpy = "^1.24.0"
pandas = "^2.0.0"

# Logging & Observability
structlog = "^23.1.0"
python-json-logger = "^2.0.7"

# API & FastAPI (for potential serving)
fastapi = "^0.103.2"
uvicorn = "^0.24.0"

# System Dependencies (via apt in Docker/Colab)
# - poppler-utils
# - tesseract-ocr

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"
flake8 = "^6.0.0"
pylint = "^2.17.0"
ruff = "^0.0.280"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_error_context = true
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers --tb=short -v --cov=src/rag_system --cov-report=term-missing --cov-report=html"
markers = [
    "async: marks tests as async (deselect with '-m \"not async\"')",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "W503"]
