[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rag-financial-multimodal"
version = "2.0.0"
description = "Enterprise-grade multimodal RAG system for financial document analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RAG Financial Team", email = "team@example.com" }]
keywords = ["rag", "financial", "multimodal", "llm", "vector-search"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry]
name = "rag-financial-multimodal"
version = "2.0.0"
description = "Enterprise-grade multimodal RAG system for financial document analysis"
authors = ["RAG Financial Team <team@example.com>"]
packages = [{ include = "rag_system", from = "src" }]

# ── Core runtime ────────────────────────────────────────────────────────────
[tool.poetry.dependencies]
python = "^3.11"

# LLM & APIs
openai        = "^1.30.0"
anthropic     = "^0.25.0"
httpx         = "^0.27.0"
tiktoken      = "^0.7.0"

# Embeddings & Vector Store
deeplake      = "^3.9.0"
numpy         = "^1.26.0"

# PDF & Vision Processing
unstructured  = { extras = ["all-docs"], version = "^0.14.0" }
pypdf         = "^4.0.0"
pdf2image     = "^1.17.0"
Pillow        = "^10.3.0"

# Config & Validation
pydantic         = "^2.7.0"
pydantic-settings = "^2.3.0"

# Web / API
fastapi       = "^0.111.0"
uvicorn       = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"

# CLI
typer         = { extras = ["all"], version = "^0.12.0" }
rich          = "^13.7.0"

# Observability
structlog     = "^24.1.0"
prometheus-client = "^0.20.0"

# Security
presidio-analyzer  = { version = "^2.2.354", optional = true }
presidio-anonymizer = { version = "^2.2.354", optional = true }

# Caching
redis         = { extras = ["hiredis"], version = "^5.0.0" }

# Utilities
pyyaml        = "^6.0.1"
psutil        = "^5.9.0"
tqdm          = "^4.66.0"
pandas        = "^2.2.0"

# Reranking
sentence-transformers = { version = "^3.0.0", optional = true }
cohere        = { version = "^5.5.0", optional = true }

# Evaluation
ragas         = { version = "^0.1.9", optional = true }
datasets      = { version = "^2.19.0", optional = true }

[tool.poetry.extras]
# pip install "rag-financial-multimodal[api]"
# pip install "rag-financial-multimodal[enterprise]"
# pip install "rag-financial-multimodal[eval]"
# pip install "rag-financial-multimodal[graph]"
# pip install "rag-financial-multimodal[agentic]"
# pip install "rag-financial-multimodal[all]"
api        = []
enterprise = ["presidio-analyzer", "presidio-anonymizer", "sentence-transformers", "cohere"]
pii        = ["presidio-analyzer", "presidio-anonymizer"]
rerank     = ["sentence-transformers"]
cohere     = ["cohere"]
eval       = ["ragas", "datasets"]
graph      = []
agentic    = []
all        = ["presidio-analyzer", "presidio-anonymizer", "sentence-transformers", "cohere", "ragas", "datasets"]

[tool.poetry.group.dev.dependencies]
pytest            = "^8.2.0"
pytest-asyncio    = "^0.23.0"
pytest-cov        = "^5.0.0"
pytest-mock       = "^3.14.0"
pytest-timeout    = "^2.3.0"
hypothesis        = "^6.100.0"
black             = "^24.4.0"
isort             = "^5.13.0"
ruff              = "^0.4.0"
mypy              = "^1.10.0"
types-pyyaml      = "^6.0.12"
types-redis       = "^4.6.0"

[tool.poetry.group.load.dependencies]
locust = "^2.28.0"

[tool.poetry.scripts]
rag-financial = "src.rag_system.cli:main_cli"

# ── Tool configs ─────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
# UP006/UP007/UP035/UP045: this codebase deliberately uses typing.Optional/List/Dict
# throughout rather than PEP 604/585 (`X | None`, `list[X]`) syntax, for consistency
# with the existing style and readability in a large team codebase. This is a style
# choice, not a correctness issue — do not "fix" these individually; if the team
# decides to migrate styles, do it as one deliberate, fully-tested sweep, not via
# scattered --fix runs that could silently touch behavior in edge cases (e.g. runtime
# isinstance checks against typing constructs).
# UP042: (str, Enum) -> StrEnum would change str()/f-string output from
# "QueryIntent.FACTUAL" to "factual" (confirmed via direct testing on this
# Python version). Every usage in this codebase already explicitly calls
# .value, so the change has zero functional benefit here while carrying a
# real behavior-change risk for any callsite not caught by this audit.
ignore = ["E501", "B008", "UP006", "UP007", "UP035", "UP045", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/", "evals/", ".venv/"]

[[tool.mypy.overrides]]
module = ["deeplake.*", "unstructured.*", "ragas.*", "locust.*", "presidio_analyzer.*", "presidio_anonymizer.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths       = ["tests"]
asyncio_mode    = "auto"
addopts         = """
  --strict-markers
  --tb=short
  -v
  --cov=src/rag_system
  --cov-report=term-missing
  --cov-report=html:htmlcov
  --cov-report=xml:coverage.xml
  --cov-fail-under=70
"""
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: integration tests (may use in-memory components)",
    "slow: tests taking >5s",
    "requires_openai: tests that need a live OpenAI key",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:langchain.*",
]

[tool.coverage.run]
source    = ["src/rag_system"]
omit      = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]
branch    = true

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abc.abstractmethod",
]
